# portfolio-python-django-api

./: .dockerignore  .env [model-it-should-not-be-here-but-gitlba-env-vars]  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  linter.sh  pyproject.toml  pytest.ini
apps/triangles/: admin.py  apiviews.py  apps.py  models.py  serializers.py  urls.py
apps/triangles/migrations/: 0001_initial.py
apps/triangles/tests/: test_A_unit_triangles_model.py  test_B_integration_triangles_resources.py
iac/: auto.tfvars  backend.tf  main.tf  variaveis.tf
iac/aws/dev/: provider.tf  variable.tf  variable.tfvars  version.tf
iac/aws/dev/app/: ecs_launch.sh
iac/aws/dev/policies/: ecs-instance-role-policy.json  ecs-role.json
main/: enumerates.py  graphql.py  logger.py  models.py  paginator.py  settings.py  urls.py  utils.py
scripts/: build_apidoc_yaml.sh  create_database.py  entrypoint.sh  linter.sh  ping.sh
src/: enumerates.py  exceptions.py  triangle.py
templates/: index.html
tests/: test_pytest_on_linting.py
